syntax = "proto3";
package indexpb;

import "indexrpcpb.proto";
import "eraftpb.proto";

service Index {
    rpc Raft (eraftpb.Message) returns (indexrpcpb.RaftDone) {
    }
    rpc RaftConfChange (indexrpcpb.ConfChangeReq) returns (indexrpcpb.RaftDone) {
    }
    rpc Peers (indexrpcpb.PeersReq) returns (indexrpcpb.PeersResp) {
    }
    rpc Metrics (indexrpcpb.MetricsReq) returns (indexrpcpb.MetricsResp) {
    }
    rpc Get (indexrpcpb.GetReq) returns (indexrpcpb.GetResp) {
    }
    rpc Put (indexrpcpb.ApplyReq) returns (indexrpcpb.PutResp) {
    }
    rpc Delete (indexrpcpb.ApplyReq) returns (indexrpcpb.DeleteResp) {
    }
    rpc Commit (indexrpcpb.ApplyReq) returns (indexrpcpb.CommitResp) {
    }
    rpc Search (indexrpcpb.SearchReq) returns (indexrpcpb.SearchResp) {
    }
    rpc Schema (indexrpcpb.SchemaReq) returns (indexrpcpb.SchemaResp) {
    }
}
