syntax = "proto3";
package indexrpcpb;

import "eraftpb.proto";

enum RespErr {
    OK = 0;
    ErrWrongLeader = 1;
    ErrNoKey = 2;
}

enum ReqType {
    Join = 0;
    Leave = 1;
    Put = 2;
    Delete = 3;
    Commit = 4;
}

message ApplyReq {
    uint64 client_id = 1;
    ReqType req_type = 2;
    JoinReq join_req = 3;
    LeaveReq leave_req = 4;
    PutReq put_req = 5;
    DeleteReq delete_req = 6;
    CommitReq commit_req = 7;
}

message ConfChangeReq {
    eraftpb.ConfChange cc = 1;
    string ip = 2;
    uint32 port = 3;
}

message RaftDone {
    RespErr err = 1;
}

message JoinReq {
    uint64 client_id = 1;
    uint64 peer_id = 2;
    string peer_addr = 3;
}

message LeaveReq {
    uint64 client_id = 1;
    uint64 peer_id = 2;
    string peer_addr = 3;
}

message PeersReq {
    uint64 client_id = 1;
    uint64 seq = 2;
}

message PeersResp {
    string value = 1;
    RespErr err = 2;
}

message MetricsReq {
    uint64 client_id = 1;
    uint64 seq = 2;
}

message MetricsResp {
    string value = 1;
    RespErr err = 2;
}

message GetReq {
    uint64 client_id = 1;
    uint64 seq = 2;
    string doc_id = 3;
}

message GetResp {
    string value = 1;
    RespErr err = 2;
}

message PutReq {
    uint64 client_id = 1;
    uint64 seq = 2;
    string doc_id = 3;
    string fields = 4;
}

message PutResp {
    RespErr err = 1;
}

message DeleteReq {
    uint64 client_id = 1;
    uint64 seq = 2;
    string doc_id = 3;
}

message DeleteResp {
    RespErr err = 1;
}

message CommitReq {
    uint64 client_id = 1;
    uint64 seq = 2;
}

message CommitResp {
    RespErr err = 1;
}

message SearchReq {
    uint64 client_id = 1;
    uint64 seq = 2;
    string query = 3;
}

message SearchResp {
    string value = 1;
    RespErr err = 2;
}

message SchemaReq {
    uint64 client_id = 1;
    uint64 seq = 2;
}

message SchemaResp {
    string value = 1;
    RespErr err = 2;
}
